# vibekeys_app

./: Cargo.toml
.claude/: hooks.json  notify.sh
src/: main.rs
vibekeys_plugin/.claude-plugin/: .plugin.json
vibekeys_plugin/hooks/: hooks.json
vibekeys_plugin/scripts/: notify_vibekeys.sh
