[package]
name = "vibekeys_app"
version = "0.1.0"
edition = "2021"

[dependencies]
btleplug = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
anyhow = "1.0"
uuid = "1.0"
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
tray-icon = "0.21"
